bk_ida/sjengida/g0/init_game
/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/init_game/src/utils.c:836:23: error: use of undeclared identifier 'unk_425340'
qmemcpy( init_board, &unk_425340, sizeof( init_board)); 
                      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O0/sjeng-gcc-O0/init_game/src/obj/utils.o] Error 1
